--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/modals": "^5.4.1",
     "@mantine/notifications": "^5.4.1",
     "@mantine/spotlight": "^5.4.1",
+    "@material-tailwind/react": "^1.2.4",
     "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
