--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "chart.js": "^4.0.1",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
@@ -31,6 +32,7 @@
     "iconsax-react": "^0.0.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
