--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@faker-js/faker": "^7.6.0",
     "@mantine/carousel": "^5.4.1",
     "@mantine/core": "^5.4.1",
     "@mantine/dates": "^5.4.1",
