--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "embla-carousel-react": "^7.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.6",
+    "highcharts-react-official": "^3.1.0",
     "iconsax-react": "^0.0.8",
     "moment": "^2.29.4",
     "react": "^18.2.0",
