--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-table-to-excel": "^1.0.5",
     "react-to-print": "^2.14.11",
     "recharts": "^2.3.2",
     "typescript": "^4.9.4",
