--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "i18next-http-backend": "^2.1.1",
     "iconsax-react": "^0.0.8",
     "json-2-csv": "^3.20.0",
-    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "lodash.get": "^4.4.2",
     "material-react-table": "^1.5.9",
     "moment": "^2.29.4",
     "papaparse": "^5.3.2",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
@@ -107,6 +107,7 @@
     "@iconify/react": "^4.0.1",
     "@types/file-saver": "^2.0.5",
     "@types/papaparse": "^5.3.7",
+    "@types/pdfmake": "^0.2.2",
     "@types/react-csv": "^1.1.3",
     "@types/react-table": "^7.7.14",
     "autoprefixer": "^10.4.13",
