--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@mui/x-date-pickers": "^5.0.14",
     "@progress/kendo-react-excel-export": "^5.11.0",
     "@react-google-maps/api": "^2.17.1",
-    "@react-pdf/renderer": "^3.1.1",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-table": "^8.7.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -56,6 +55,7 @@
     "material-react-table": "^1.5.9",
     "moment": "^2.29.4",
     "papaparse": "^5.3.2",
+    "pdf-lib": "^1.17.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
