--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workbench",
+  "name": "cudie",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +24,7 @@
     "@mui/x-date-pickers": "^5.0.14",
     "@progress/kendo-react-excel-export": "^5.11.0",
     "@react-google-maps/api": "^2.17.1",
+    "@rollbar/react": "^0.11.1",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-table": "^8.7.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -75,6 +76,7 @@
     "react-to-print": "^2.14.11",
     "react-toastify": "^9.1.2",
     "recharts": "^2.3.2",
+    "rollbar": "^2.26.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
