--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.6",
     "file-saver": "^2.0.5",
-    "formik": "^2.2.9",
+    "formik": "^2.4.2",
     "framer-motion": "^7.10.3",
     "highcharts": "^10.3.2",
     "highcharts-react-official": "^3.1.0",
@@ -69,8 +69,9 @@
     "react-jsx-highmaps": "^3.0.0",
     "react-paginate": "^8.1.4",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "react-table-to-excel": "^1.0.5",
     "react-to-print": "^2.14.11",
