--- a/src/dummyData/approvedList.json
+++ b/src/dummyData/approvedList.json
@@ -15,7 +15,8 @@
         "phone number": "+880 254 156 2548",
         "country": "USA",
         "date": "2 days ago",
-        "riskLevel": "Low Risk"
+        "riskLevel": "Low Risk",
+        "status": "Approved"
       },
   
       {
